# sarv-media-server

./: .env.example  .env.prod.example  .gitignore  CAMBIOS_IMPLEMENTADOS.md  Caddyfile  Caddyfile.prod  Cargo.toml  Dockerfile  Dockerfile.dev  ENV_SETUP.md  MAINTENANCE.md  Makefile  PRODUCTION_READINESS.md  README.md  RUNBOOK.md  S3_BACKUP_README.md  S3_QUICK_CONFIG.md  STORAGE_ANALYSIS.md  UI_IMPROVEMENTS.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  mediamtx.example.yml  mediamtx.yml
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/app/: config.py  deps.py  graph.py  main.py  state.py
agent/app/domain/: models.py  ports.py
agent/app/infra/: failure_history_api.py  gemini.py  log_reader.py  mediamtx_api.py  null_failure_history.py  null_notifier.py  scheduler.py  slack.py
agent/app/rules/: __init__.py  playbook.py
agent/app/security/: auth.py  redactor.py
agent/app/services/: classifier.py  collector.py  diagnoser.py  health_report.py  notify.py  reporter.py  runner.py
agent/tests/: test_auth.py  test_classifier.py  test_collector.py  test_diagnoser.py  test_graph.py  test_notify.py  test_readonly.py  test_redactor.py  test_runner.py
caddy/: Dockerfile
config/: clients.example.json
frontend/: Dockerfile.dev  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: api.ts  brand.config.ts  types.ts
frontend/src/lib/components/: AreaModal.svelte  CameraCard.svelte  CameraModal.svelte  CameraViewer.svelte  ConfirmDeleteDialog.svelte  LocationModal.svelte  Modal.svelte  MosaicModal.svelte  NotificationPanel.svelte  RoleModal.svelte  ShareMosaicModal.svelte  Sidebar.svelte  SyncMonitor.svelte  Toast.svelte  UserModal.svelte
frontend/src/lib/stores/: app.svelte.ts  auth.svelte.ts  theme.svelte.ts  toast.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/forgot-password/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/reset-password/: +page.svelte
frontend/src/routes/shared/[token]/: +page.svelte
frontend/static/: manifest.json  sw.js
migrations/: .gitkeep  0001_init.sql
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
nginx/: nginx.conf
scripts/: Dockerfile.rclone  backup-db.sh  backup.sh  health-check.sh  manual-sync.sh  restore-db.sh  setup-https.sh
scripts/rclone/: rclone.conf
src/: camera.rs  capture.rs  clients.rs  crypto.rs  db.rs  email.rs  keys.rs  location.rs  main.rs  models.rs  mosaic.rs  mosaic_share.rs  notification.rs  role.rs  secret.rs  security.rs  sync.rs  thumbnail.rs  user.rs
src/domain/: mod.rs  models.rs  ports.rs
src/http/: admin.rs  consumer.rs  mod.rs
src/infra/: db.rs  mediamtx.rs  mod.rs
src/infra/postgres/: camera_repo.rs  failure_repo.rs  mod.rs  project_repo.rs
src/services/: auth.rs  mod.rs  reconciler.rs
static/: index.html
templates/: reset_password.hbs  share_mosaic.hbs  welcome.hbs
