[package]
name = "mediamtx-auth-backend"
version = "0.1.0"
edition = "2021"
description = "Backend de autenticación JWT para MediaMTX"
authors = ["Dev"]

[dependencies]
# Runtime async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }

# Framework HTTP
axum = { version = "0.7", features = ["macros", "json"] }

# Serialización JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT
jsonwebtoken = "9"

# Tiempo
time = { version = "0.3", features = ["serde"] }

# RSA para generación de claves
rsa = "0.9.7"
rand = "0.8"

# Base64 para JWKS
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI / Scalar
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-scalar = { version = "0.1", features = ["axum"] }

# Variables de entorno desde .env
dotenvy = "0.15"

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP client (for MediaMTX API)
reqwest = { version = "0.12", features = ["json"] }

# Static file serving
tower-http = { version = "0.5", features = ["fs", "cors"] }

# UUID for unique IDs
uuid = { version = "1", features = ["v4"] }
