[package]
name = "mediamtx-auth-backend"
version = "0.1.0"
edition = "2021"
description = "Backend de autenticación JWT para MediaMTX"
authors = ["Dev"]

[dependencies]
# Runtime async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Framework HTTP
axum = { version = "0.7", features = ["macros", "json"] }

# Serialización JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# JWT
jsonwebtoken = "9"

# Hashing de secretos por proyecto (Argon2id)
argon2 = "0.5"

# Tiempo
time = { version = "0.3", features = ["serde"] }

# RSA para generación de claves
rsa = "0.9.7"
rand = "0.8"

# Base64 para JWKS
base64 = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI / Scalar
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-scalar = { version = "0.1", features = ["axum"] }

# Variables de entorno desde .env
dotenvy = "0.15"

# Base de datos (HU 4.1): Postgres async + migraciones.
# Sin backend TLS: en dev la conexión es local y en prod va por el Cloud SQL
# Auth Proxy (TLS lo maneja el proxy). Se puede añadir tls-rustls-ring si algún
# día conectamos directo a Cloud SQL con SSL.
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono", "json"] }

# Tipos de dominio (HU 4.1)
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Contratos async (puertos) usados como objetos de trait (dyn)
async-trait = "0.1"

# Errores de dominio
thiserror = "1"

# Cifrado en reposo de credenciales de cámara (HU 4.1)
aes-gcm = "0.10"

# Cliente HTTP para la Control API de MediaMTX (HU 4.2). Solo http interno:
# sin backend TLS (default-features off) para un build ligero.
reqwest = { version = "0.12", default-features = false, features = ["json"] }
