[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stream-agent"
version = "0.1.0"
description = "Agente de diagnóstico de cámaras (Fase 1, solo lectura) para el sarv-media-server"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Dependencias que entran en tareas posteriores del sprint:
#   ia     -> diagnóstico IA (HU 1.1, tarea Gemini)
#   sched  -> ejecución automática (HU 1.2)
ia = [
    "langgraph>=0.2",
    "langchain-google-genai>=2.0",
]
sched = [
    "apscheduler>=3.10",
]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
